--- a/TurtleGraphics/locale/cs-cz.txt
+++ b/TurtleGraphics/locale/cs-cz.txt
@@ -1,4 +1,5 @@
-﻿41051367:Sestavuji...
+﻿/Čeština
+41051367:Sestavuji...
 5665650:Zrušit
 70725580:Načíst
 84416465:Jméno skeče:
@@ -12,6 +13,7 @@
 47297997:Želví Grafika
 36001163:Zobrazovat Želvu
 2417883:Spustit na celé obrazovce
-30044441:Nastavení WIP
+30044441:Nastavení
 80317709:Start
 59860665:Stop
+18137498:Jazyk
