--- a/TurtleGraphics/locale/en-us.txt
+++ b/TurtleGraphics/locale/en-us.txt
@@ -17,3 +17,8 @@
 80317709:Run
 59860665:Stop
 18137498:Language
+53128316:Back
+93144682:An exception occured!
+79452378:Message:
+73815551:Stack trace:
+51656026:I'll do better!
